--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,,,
+  "private": true,
   "name": "emilia",
   "description": "Minimalistic portfolio/photography site with masonry grid, page transitions and big images. Themeable with Theme UI. Includes Light/Dark mode.",
   "version": "0.3.11",
